--- a/Lab3_202331858_안솔비.md
+++ b/Lab3_202331858_안솔비.md
@@ -9,7 +9,8 @@ In order to build it, I will use opencv, deep learning libraries, such as [Tenso
 
 For example, the objects in the following images were detected using [mmdetection](https://github.com/open-mmlab/mmdetection):
 
-<img src=![137271636-56ba1cd2-b110-4812-8221-b4c120320aa9](https://github.com/user-attachments/assets/fd8e7ab5-c7b7-4bbe-bdd6-94ab1687e174)>
+<img src=![137271636-56ba1cd2-b110-4812-8221-b4c120320aa9](https://github.com/user-attachments/assets/425bf16e-c8e7-40e9-b501-033919afa8c6)
+>
 
 ----
 
