--- a/Lab3_202331858_안솔비.md
+++ b/Lab3_202331858_안솔비.md
@@ -14,7 +14,7 @@ For example, the objects in the following images were detected using [mmdetectio
 
 ----
 
-Dependencies (Level 3 Heading)
+**Dependencies (Level 3 Heading)**
 
 *python
 
